--- a/paginaprincipal.html
+++ b/paginaprincipal.html
@@ -1,19 +1,35 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="paginaprincipal.css" />
-        <title>Pagina Inicial</title>
-    </head>
-    <body>
-        <div class="fundo">
-            <div class="boasvindas">
-                <h1>BOAS VINDAS!</h1>
-                <p> Seja bem vindo ao nosso site, esperamos que ele lhe ajude a melhorar suas capacidades na escrita
-                    e nas competências da redação</p>
+	<head>
+	    <title> Pagina Inicial </title>
+        <link rel="stylesheet" href="primeirapagina.css">
+	</head>
+	<body>
+        <div class="container">
+            <div class="navegador"> Navegador
+                <div> navegadorzinho </div>
             </div>
-            <div class="redação"> <h2> REDAÇÃO </h2> </div>
-            <p class="temas"> Tema 1: O trabalho infantil na sociedade brasileira </p> <button><a href=>Acesse nosso site!</a> ESCREVER </button>
-            <p  class="temas"> Tema 2: Analfabetismo Comtemporaneo </p> <button> ESCREVER </button>
+
+
+            <div class="main">
+                <div class="boasvindas">
+                    <h1> Boas Vindas </h1>
+                    <br>
+                    <div class="textoboasvindas"><p><B>Esperamos que esse site possa ser benéfico para seu aprendizado e assim que nosso projeto possa dar frutos à seu futuro!</B></p></div>
+                </div>
+            </div>
+            <div class="barralateral">Barra</div>
+            <div class="redacao">redacao</div>
+            <div class="conteudo1"> conteudo1
+                <p> Tema 1: O trabalho infantil na sociedade brasileira </p> <a href='conteudo1.html'><button>escrever</button></a>
+            </div>
+            <div class="conteudo2"> conteudo2</div>
+            <div class="conteudo3"> conteudo3</div>
+            <div class="conteudo4"> conteudo4</div>
+            <div class="conteudo5"> conteudo5</div>
+            <div class="conteudo6"> conteudo6</div>
+            <div class="conteudo7"> conteudo7</div>
+            <div class="conteudo8"> conteudo8</div>
         </div>
-    </body>
+	</body>
 </html>
